--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "async": "0.1.x",
-    "imagemagick": "0.1.x"
+    "imagemagick": "git+https://github.com/plusbpm/node-imagemagick.git"
   },
   "engines": {
     "node": "*"
